<resources>
    <string name="app_name">KeyDays</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="add_date">ADD</string>
    <string name="email_hint">Email</string>
    <string name="name_hint">Name</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="login_button">Login</string>
    <string name="direct_to_register">Not have an account? Now register!</string>
    <string name="or">Or</string>
    <string name="log_out">Log out</string>
    <string name="title_activity_date_detail">DateDetailActivity</string>
    <string name="not_logged_msg">You are not logged in!!!</string>
</resources>
