<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="@dimen/general_margin"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical" >


        <!-- logo -->

        <!-- 编辑框 -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/general_margin"
            android:layout_marginEnd="@dimen/general_margin">

            <EditText
                android:id="@+id/et_email"
                android:hint="@string/email_hint"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/general_margin"
            android:layout_marginEnd="@dimen/general_margin">

            <EditText
                android:id="@+id/et_name"
                android:hint="@string/name_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/general_margin"
            android:layout_marginEnd="@dimen/general_margin"
            >

            <EditText
                android:id="@+id/et_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:backgroundTint="@color/colorPrimary"/>

        </android.support.design.widget.TextInputLayout>

        <!--<android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/general_margin"
            android:layout_marginEnd="@dimen/general_margin">

            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:backgroundTint="@color/colorPrimary"/>

        </android.support.design.widget.TextInputLayout>-->

        <Button
            android:id="@+id/register_button"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/register"
            />

    </LinearLayout>
</ScrollView>